src/test/deca/syntax/valid/print_bonjour.deca
{ println(1.0004); }