src/test/deca/syntax/invalid/Objets/14AppelMethodSansPar.deca
class Invalid {
    float test = 12.5;

    float getTest() {
        return test;
    }
}

{
    Invalid invalid = new Invalid();
    println(getTest);
}